--- a/src/components/Block.astro
+++ b/src/components/Block.astro
@@ -12,7 +12,7 @@ const { block } = Astro.props;
     switch (block.type) {
       case "line": {
         return (
-          <div class={`pl-[${block.indent}rem] mb-[0.5rem]`}>
+          <div class="mb-[0.5rem]" style={`padding-left: ${block.indent}rem`}>
             {block.nodes.length > 0 ? (
               block.nodes.map((node) => <Node node={node} />)
             ) : (
@@ -23,7 +23,10 @@ const { block } = Astro.props;
       }
       case "codeBlock": {
         return (
-          <div class={`pl-[${block.indent}rem] overflow-scroll`}>
+          <div
+            class="overflow-scroll"
+            style={`padding-left: ${block.indent}rem`}
+          >
             <code>{block.fileName}</code>
             <pre>
               <code>{block.content}</code>
