--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pages = json as Page[];
 
 <Layout>
   <title slot="after-header">I am Electrical machine</title>
-  <div class="max-w-[600px] mx-auto pb-[200px]">
+  <div class="max-w-[600px] pb-[200px] mx-4 lg:mx-auto">
     <ul>
       {
         pages.map((page) => (
