--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SJB62M7N1F"
     ></script>
     <script type="text/javascript">
