--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { isGyazoUrl, gyazoSrcset } from "lib/gyazo";
 import Layout from "Layout.astro";
 const p = parseInt(Astro.url.searchParams.get("p") ?? "0");
 const res = await fetch(
-  `https://chimerical-tartufo-0fd27a.netlify.app/api/latest_articles?p=${p}`
+  `https://${import.meta.env.API_DOMAIN}/api/latest_articles?p=${p}`
 );
 const json = await res.json();
 const pages = json as Page[];
@@ -13,7 +13,7 @@ const pages = json as Page[];
 
 <Layout>
   <title slot="after-header">I am Electrical machine</title>
-  <div class="max-w-[600px] pb-[200px] mx-4 lg:mx-auto">
+  <div class="max-w-[600px] pb-[200px] px-4 mx-auto">
     <ul>
       {
         pages.map((page) => (
