--- a/src/components/Node.astro
+++ b/src/components/Node.astro
@@ -18,7 +18,7 @@ const { node } = Astro.props;
       case "hashTag": {
         return (
           <a
-            href={`https://sbx.kbys.tk/pages/${titlePurify(node.href)}`}
+            href={`https://w.kbys.tk/pages/${titlePurify(node.href)}`}
             class="text-blue-500"
           >
             #{node.href}
@@ -30,7 +30,7 @@ const { node } = Astro.props;
           case "relative": {
             return (
               <a
-                href={`https://sbx.kbys.tk/pages/${titlePurify(node.href)}`}
+                href={`https://w.kbys.tk/pages/${titlePurify(node.href)}`}
                 class="text-blue-500"
               >
                 {node.href}
