--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -14,6 +14,12 @@
 
       gtag("config", "G-SJB62M7N1F");
     </script>
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      href="https://w.kbys.tk/rss.xml"
+      title="I am Electrical machine"
+    />
     <slot name="after-header" />
   </head>
   <body>
