--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -17,7 +17,7 @@
     <link
       rel="alternate"
       type="application/rss+xml"
-      href="https://w.kbys.tk/rss.xml"
+      href="https://w.jgs.me/rss.xml"
       title="I am Electrical machine"
     />
     <slot name="after-header" />
