--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,12 @@ const pages = json.payload as Page[];
                   {page.title}
                 </div>
               )}
-              <div class="font-bold text-[1.2rem]">{page.title}</div>
+              <div
+                class="font-bold text-[1.2rem]"
+                transition:name={`title:${encodeURIComponent(page.title)}`}
+              >
+                {page.title}
+              </div>
             </a>
           </li>
         ))
