--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,13 @@ const pages = json.payload as Page[];
 
 <Layout>
   <title slot="after-header">I am Electrical machine</title>
+  <link
+    slot="after-header"
+    rel="alternate"
+    type="application/rss+xml"
+    title="RSS Feed"
+    href="/rss.xml"
+  />
   <div class="max-w-[600px] pb-[200px] px-4 mx-auto">
     <Search />
     <ul>
